# MVPReadinessAnalyzer

./: README.md  install.sh  package-lock.json  run_backend.sh  run_frontend.sh  seed_demo.sh
backend/: .env  app.py  config.py  log_config.py  pyproject.toml  seed_demo.py
backend/ai/: client.py
backend/api/: routes.py
backend/db/: models.py
backend/domain/: schemas.py
backend/instance/: mvp_analyzer.db
backend/services/: analyzer.py  scoring.py
backend/tests/: test_flows.py  test_scoring_scenarios.py
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AnalysisLoading.jsx  IdeaForm.jsx  ReportView.jsx
